--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,8 @@
                         <span style="display:none">email error</span>
                     </li>
                     <li>
-                        <button id="login" type="submit"><h3>{{ nav_account.Login.1 }}</h3></button>
+                        <!-- <button id="login" type="submit"><h3>{{ nav_account.Login.1 }}</h3></button> -->
+                        <button id="login" type="submit"><h3>Login</h3></button>
                     </li>
                     <li>
                         <a href="{{ nav_account.SignUp.0 }}">{{ nav_account.SignUp.1 }}</a>
