--- a/templates/my-account.html
+++ b/templates/my-account.html
@@ -18,16 +18,16 @@
             
             <ul>
                 <!-- <label for="test">Your name: </label> -->
-                <li><b>email</b></li>
-                <li>passWord</li>
-                <li>UserName</li>
-                <li>FirstName</li>
-                <li>LastName</li>
-                <li>Address</li>
-                <li>Street</li>
-                <li>City</li>
-                <li>Country</li>
-                <li>Code</li>
+                <li>email: {{ my_account.email }}</li>
+                <li>passWord: {{ my_account.password }}</li>
+                <li>UserName: {{ my_account.user_id }}</li>
+                <li>FirstName: {{ my_account.first_name }}</li>
+                <li>LastName: {{ my_account.last_name }}</li>
+                <li>Address: {{ my_account.address }}</li>
+                <li>Street: {{ my_account.street }}</li>
+                <li>City: {{ my_account.city }}</li>
+                <li>Country: {{ my_account.country }}</li>
+                <li>Code: {{ my_account.code }}</li>
 
             </ul>
 
