--- a/templates/products.html
+++ b/templates/products.html
@@ -15,8 +15,8 @@
             
             {% for product_info in product_info %}
             <div class="margin-around">
-                <div><a href="products/{{ product_info.asin }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.asin }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></div>
+                <div><a href="products/{{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></div>
                 <div>$<b>{{ product_info.price }}</b></div>
             </div>
             {% endfor %}
