--- a/templates/nav.html
+++ b/templates/nav.html
@@ -19,7 +19,11 @@
         </div>
         <div class="account flex-container">
             <div><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div>
+            {% if user_account == None %}
             <div><a href="{{ nav_account.account.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
+            {% else %}
+            <div><a href="{{ nav_account.myAccount.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
+            {% endif %}
         </div>
     </div>
 
