--- a/templates/products.html
+++ b/templates/products.html
@@ -13,10 +13,18 @@
     <div class="wrap">
         <div class="container grid-container products-shelf">
             
+            <!-- {% for product_info in product_info %}
+            <div class="margin-around">
+                <div><a href="products/{{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></div>
+                <div>$<b>{{ product_info.price }}</b></div>
+            </div>
+            {% endfor %} -->
+
             {% for product_info in product_info %}
             <div class="margin-around">
-                <div><a href="{{ nav_nav.Product }}/{{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
-                <div><a href="{{ nav_nav.Product }}/{{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></div>
+                <div><a href="products/{{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></div>
                 <div>$<b>{{ product_info.price }}</b></div>
             </div>
             {% endfor %}
