--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
                 <span>Minimalistic Style Wooden Wall Decor</span>
             </div>
             <div>
-                <a href="products/{{ product_asin.3 }}" class="learnMore auto-margin">Learn more</a>
+                <a href="products/{{ product_asin.3 }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
             </div>
         </div>
 
@@ -30,23 +30,23 @@
 
         <div class="container grid-container products-shelf">
             <div class="margin-around">
-                <div><a href="products/{{ product_info.0.asin }}"><img src="{{ product_info.0.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.0.asin }}" title="{{ product_info.0.title }}" class="display-row-3">{{ product_info.0.title }}</a></div>
+                <div><a href="products/{{ product_info.0.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.0.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.0.asin }}{{ includ_user_id_url }}" title="{{ product_info.0.title }}" class="display-row-3">{{ product_info.0.title }}</a></div>
                 <div>$<b>{{ product_info.0.price }}</b></div>
             </div>
             <div class="margin-around">
-                <div><a href="products/{{ product_info.1.asin }}"><img src="{{ product_info.1.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.1.asin }}" title="{{ product_info.1.title }}" class="display-row-3">{{ product_info.1.title }}</a></div>
+                <div><a href="products/{{ product_info.1.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.1.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.1.asin }}{{ includ_user_id_url }}" title="{{ product_info.1.title }}" class="display-row-3">{{ product_info.1.title }}</a></div>
                 <div>$<b>{{ product_info.1.price }}</b></div>
             </div>
             <div class="margin-around">
-                <div><a href="products/{{ product_info.2.asin }}"><img src="{{ product_info.2.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.2.asin }}" title="{{ product_info.2.title }}" class="display-row-3">{{ product_info.2.title }}</a></div>
+                <div><a href="products/{{ product_info.2.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.2.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.2.asin }}{{ includ_user_id_url }}" title="{{ product_info.2.title }}" class="display-row-3">{{ product_info.2.title }}</a></div>
                 <div>$<b>{{ product_info.2.price }}</b></div>
             </div>
             <div class="margin-around">
-                <div><a href="products/{{ product_info.3.asin }}"><img src="{{ product_info.3.first_img }}" alt=""></a></div>
-                <div><a href="products/{{ product_info.3.asin }}" title="{{ product_info.3.title }}" class="display-row-3">{{ product_info.3.title }}</a></div>
+                <div><a href="products/{{ product_info.3.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.3.first_img }}" alt=""></a></div>
+                <div><a href="products/{{ product_info.3.asin }}{{ includ_user_id_url }}" title="{{ product_info.3.title }}" class="display-row-3">{{ product_info.3.title }}</a></div>
                 <div>$<b>{{ product_info.3.price }}</b></div>
             </div>
         </div>
@@ -63,7 +63,7 @@
                 <span>Minimalistic Style Wooden Wall Decor</span>
             </div>
             <div>
-                <a href="products/{{ product_asin.1 }}" class="learnMore auto-margin">Learn more</a>
+                <a href="products/{{ product_asin.1 }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
             </div>
         </div>
 
@@ -80,7 +80,7 @@
                 <p><span>Minimalistic Style Wooden Wall Decor</span></p>
             </div>
             <div>
-                <a href="products/{{ product_asin.2 }}" class="learnMore auto-margin">Learn more</a>
+                <a href="products/{{ product_asin.2 }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
             </div>
         </div>
 
@@ -96,7 +96,7 @@
                 <p><span>Minimalistic Style Wooden Wall Decor</span></p>
             </div>
             <div>
-                <a href="products/{{ product_asin.0 }}" class="learnMore auto-margin">Learn more</a>
+                <a href="products/{{ product_asin.0 }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
             </div>
         </div>
         
