--- a/templates/detail.html
+++ b/templates/detail.html
@@ -34,6 +34,7 @@
                 </div>
                 <div>
                     <ul class="bullet-point">
+                        <li>{{ product_description.0 }}</li>
                         <li>{{ product_description.bullet_point_00 }}</li>
                         <li>{{ product_description.bullet_point_01 }}</li>
                         <li>{{ product_description.bullet_point_02 }}</li>
