filter asin type

--- a/static/css/module.css
+++ b/static/css/module.css
@@ -65,7 +65,11 @@
 {
   color: #ff6666;
 }
-
+.product-info
+{
+  background-color: #f5f5f5;
+  border-radius: 6px;
+}
 /* products-shelf & product-info start */
 .product-info div, div > p
 {
@@ -177,6 +181,7 @@ widget
     line-height: 50px;
     border-radius: 30px;
   }
+ 
   .product-info > div > h1
   {
     font-size: 52px;
