--- a/templates/footer.html
+++ b/templates/footer.html
@@ -16,6 +16,6 @@
         <div></div>
     </div>
     <div class="container padding-b">
-        Copyright © 2022 3.9Kr Inc. All rights reserved. 
+        Copyright © 2020-2023 3.9Kr Inc. All rights reserved. 
     </div>
 </footer>
