--- a/templates/detail.html
+++ b/templates/detail.html
@@ -50,11 +50,11 @@
             </div>
         </div>
 
-        <div class="container">
+        <!-- <div class="container">
 
             <img src="{{ product_img.img_970_url.0 }}" alt="" />
 
-        </div>
+        </div> -->
 
         <div class="container">
 
@@ -62,7 +62,7 @@
 
         </div>
 
-        <div class="container grid">
+        <!-- <div class="container grid">
             <div>
                 <img src="{{ product_img.img_300_url.0 }}" alt="" />
             </div>
@@ -84,7 +84,7 @@
                 <img src="{{ product_img.img_970_url.2 }}" alt="" />
             </div>
 
-        </div>
+        </div> -->
 
     </div>
 
