--- a/templates/detail.html
+++ b/templates/detail.html
@@ -21,7 +21,7 @@
             </div>
             <div class="product-info">
                 <div><h1>{{ product_info.title }}</h1></div>
-                <div>$<span>{{ product_info.price }}</span></div>
+                <div>$<span>{{ product_price.price }}</span></div>
                 <!-- <div> -->
                     <!-- <form action="/JAL/" method="post"> -->
                         <!-- {%csrf_token%} -->
