edit product done

--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
         
     </div>
 
-    <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
+    <!-- <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
     
         <div class="position">
             <div>
@@ -100,7 +100,7 @@
             </div>
         </div>
         
-    </div>
+    </div> -->
 
 
     {% include "footer.html" %}
