--- a/templates/edit.html
+++ b/templates/edit.html
@@ -23,9 +23,12 @@
         <div class="wrap">
             <br>
             <div class="container products-shelf">
-                <h3><label><b>{{ asin }}</b></label></h3>
-                <input style="font-size: 18px;" type="text" name="price" id="" value="{{ listing.price }}" />
+                <h3><b>{{ asin }}</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a style="font-size: 20px;" href="{{ editlist }}">< Back to editList ></a></h3><br>
+                <b>price: </b><input style="font-size: 18px;" type="text" name="price" id="" value="{{ listing.price }}" />
+                <b>status: </b><input style="font-size: 18px;" type="text" name="status" id="" value="{{ listing.status }}" />
                 <button id="" type="submit"><h3>commit</h3></button>
+                <!-- <button id=""  href="{{ editlist }}"><h3>Back to editList</h3></button> -->
+                
                 <!-- <label>{{ status }}</label> -->
             </div>
             <br>
@@ -37,7 +40,8 @@
             <div class="container products-shelf">
                 <h3><b>BulletPoint</b></h3>
                 {% for bp in bullet_point %}
-                <textarea style="font-size: 18px;" name="bullet_point_{{ forloop.counter }}" id="" cols="130" rows="3">{{ bp }}</textarea>
+                <textarea style="font-size: 18px;" name="bullet_point_{{ forloop.counter }}" id="" cols="130" rows="3">{{ bp }}</textarea> -- {{ forloop.counter }}
+                <br>
                 {% endfor %}
             </div>
             <br>
@@ -46,10 +50,10 @@
                 <textarea style="font-size: 18px;" name="description" id="" cols="130" rows="15">{{ listing.description }}</textarea>
             </div>
             <br>
-            <div class="container products-shelf">
+            <!-- <div class="container products-shelf">
                 <h3><b>status</b></h3>
                 <textarea style="font-size: 18px;" name="status" id="" cols="130" rows="1">{{ listing.status }}</textarea>
-            </div>
+            </div> -->
         </div>
     </form>
     <!-- 
