--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
         
     </div>
 
-    <!-- <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
+    <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
     
         <div class="position">
             <div>
@@ -70,7 +70,7 @@
     </div>
     
     
-    <div id="B0BRHWQ27R" class="wrap" img_name="{{ img_name.B0BRHWQ27R }}">
+    <!-- <div id="B0BRHWQ27R" class="wrap" img_name="{{ img_name.B0BRHWQ27R }}">
 
         <div class="position">
             <div>
@@ -84,9 +84,9 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
     
-    <div id="B09KG4R3YR" class="wrap" img_name="{{ img_name.B09KG4R3YR }}">
+    <!-- <div id="B09KG4R3YR" class="wrap" img_name="{{ img_name.B09KG4R3YR }}">
 
         <div class="position">
             <div>
