--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,13 @@
     
         <div class="position">
             <div>
-                <h1 class="stronger">CLOUD KEY HOLDER</h1>
+                <h1 class="stronger">{{ product_description.0.bullet_point_01 }}</h1>
             </div>
             <div>
-                <span>Minimalistic Style Wooden Wall Decor</span>
+                <span>{{ product_description.0.bullet_point_02 }}</span>
             </div>
             <div>
-                <a href="products/{{ product_asin.3 }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
+                <a href="products&asin={{ product_description.0.asin }}{{ includ_user_id_url }}" class="learnMore auto-margin">Learn more</a>
             </div>
         </div>
 
@@ -53,7 +53,7 @@
         
     </div>
 
-    <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
+    <!-- <div id="B0BTWT5GL8" class="wrap" img_name="{{ img_name.B0BTWT5GL8 }}">
     
         <div class="position">
             <div>
@@ -67,7 +67,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
     
     
     <!-- <div id="B0BRHWQ27R" class="wrap" img_name="{{ img_name.B0BRHWQ27R }}">
