--- a/templates/manager-product-list.html
+++ b/templates/manager-product-list.html
@@ -10,7 +10,10 @@
     {% include "nav.html" %}
 
     <div class="wrap">
-        
+        <br>
+        <div class="container">
+            <h3><a style="font-size: 20px;" href="{{ admin }}">< Back to Manager</a></h3>
+        </div>
         <!-- {% for title in listing %}
         <div class="container grid">
             <div>left</div>
