--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,6 @@
+<div style="background-color: rgb(37, 82, 59); height: 20px;">
 
+</div>
 <nav>
     <div class="nav-plus container">
         <div>
