--- a/templates/products.html
+++ b/templates/products.html
@@ -26,7 +26,7 @@
                 <div><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}" title="{{ product_info.title }}" class="display-row-3">{{ product_info.title }}</a></div>
                 <div><b>$ {{ product_info.price }}</b></div>
-                <!-- <div><b>$ {{ product_info.price }} | {{ product_info.asin }} | {{ product_info.status }}</b></div> -->
+                <div><b>$ {{ product_info.price }} | {{ product_info.asin }} | {{ product_info.status }}</b></div>
             </div>
             {% endfor %}
 
