--- a/templates/products.html
+++ b/templates/products.html
@@ -11,6 +11,8 @@
     
 
     <div class="wrap">
+        <br>
+        <div class="container" >&#20;&#20;result over {{ lenth }}</div>
         <div class="container grid-container products-shelf">
             
             <!-- {% for product_info in product_info %}
