--- a/templates/footer.html
+++ b/templates/footer.html
@@ -14,6 +14,8 @@
             </ul>
         </div>
         <div></div>
+        <div></div>
+        <div></div>
     </div>
     <div class="container padding-b">
         Copyright © 2020-2023 3.9Kr Inc. All rights reserved. 
