--- a/templates/head.html
+++ b/templates/head.html
@@ -14,8 +14,8 @@
 
 <!-- CSS -->
 <link type="text/css" rel="stylesheet" media="all" href="/static/css/main.css">
-<link type="text/css" rel="stylesheet" media="all" href="/static/css/layout.css">
-<link type="text/css" rel="stylesheet" media="all" href="/static/css/module.css">
+<!-- <link type="text/css" rel="stylesheet" media="all" href="/static/css/layout.css"> -->
+<!-- <link type="text/css" rel="stylesheet" media="all" href="/static/css/module.css"> -->
 
 <!-- Js -->
 <script src="/static/js/base.js" defer="defer"></script>
